# GennadyObjectLearningModel

./: .gitignore  README.md  main.py  pyproject.toml
src/config/: settings.py
src/implementations/detection/: mock_detector.py  yolo_detector.py
src/implementations/parsing/: mock_parser.py  sam2_adapter.py  sam2_anatomy_parser.py  segformer_adapter.py  segformer_parser.py
src/implementations/pose/: mediapipe_holistic_adapter.py  mock_pose.py
src/implementations/rendering/: opencv_renderer.py
src/implementations/scene/: basic_scene_builder.py
src/implementations/tracking/: simple_tracker.py
src/interfaces/: contracts.py
src/io/: input_loader.py  output_writer.py
src/models/: schemas.py
src/orchestrator/: pipeline.py
src/representation/: __init__.py  builder.py  filtering.py  garment_reasoning.py  parsing_adapters.py  reliability.py  schemas.py  state_rules.py  utils.py
src/visualization/: drawing.py  representation_drawing.py
tests/: test_representation.py
